[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/EnemyAI/Enemy_3.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]

[sub_resource type="CapsuleShape2D" id=2]
radius = 25.0
height = 40.0

[node name="Brachinous" type="Node2D"]
script = ExtResource( 1 )
pursueSpeed = 500

[node name="Base" type="Node2D" parent="."]

[node name="Kinematic Body" type="KinematicBody2D" parent="Base" groups=[
"Enemies",
"Hazard",
]]
rotation = 1.5708
collision_layer = 16
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base/Kinematic Body"]
scale = Vector2( 2, 2 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Base"]
rotation = 1.5708
collision_layer = 0
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Base/Area2D"]
polygon = PoolVector2Array( 0, 0, 150, -400, -150, -400 )

[node name="Timer" type="Timer" parent="Base"]

[node name="StunedTimer" type="Timer" parent="Base"]
wait_time = 4.0

[node name="CollisionArea" type="Area2D" parent="Base"]
visible = false
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base/CollisionArea"]
rotation = 1.5708
shape = SubResource( 2 )

[node name="RayCastParent" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCastParent"]
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 600 )
collision_mask = 34
[connection signal="body_entered" from="Base/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Base/Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Base/Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Base/StunedTimer" to="." method="_on_StunedTimer_timeout"]
[connection signal="body_entered" from="Base/CollisionArea" to="." method="_on_CollisionArea_body_entered"]
